force-app/main/default/objects/aos_Referral_Stage_Tracking__c/aos_Referral_Stage_Tracking__c.object-meta.xml
<CustomObject>
    <label>Referral Stage Tracking</label>
    <nameField>
        <displayFormat>RST{00000}</displayFormat>
        <label>Referral Stage Tracking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referral Stage Trackings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>