force-app/main/default/objects/aos_Referral_Stage_Tracking__c/fields/aos_Animal_Referral__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Animal Referral</label>
    <referenceTo>animalos__Animal_Referral__c</referenceTo>
    <relationshipLabel>Referral Stage Trackings</relationshipLabel>
    <relationshipName>Referral_Stage_Tracking_Records</relationshipName>
    <type>Lookup</type>
</CustomField>