force-app/main/default/objects/aos_Referral_Stage_Tracking__c/fields/aos_Days_In_Status__c.field-meta.xml
<CustomField>
    <fullName>aos_Days_In_Status__c</fullName>
    <formula>IF( ISBLANK( aos_End_Date_Time__c ), NOW() - aos_Start_Date_Time__c, aos_End_Date_Time__c - aos_Start_Date_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days In Status</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>