force-app/main/default/objects/aos_Referral_Stage_Tracking__c/fields/aos_Parent_Referral_Stage_Tracking__c.field-meta.xml
<CustomField>
    <fullName>aos_Parent_Referral_Stage_Tracking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Referral Stage Tracking</label>
    <referenceTo>aos_Referral_Stage_Tracking__c</referenceTo>
    <relationshipLabel>Referral Stage Trackings</relationshipLabel>
    <relationshipName>aos_Referral_Stage_Tracking_Childs</relationshipName>
    <type>Lookup</type>
</CustomField>