force-app/main/default/objects/aos_Referral_Stage_Tracking__c/fields/aos_Referral__c.field-meta.xml
<CustomField>
    <fullName>aos_Referral__c</fullName>
    <label>Referral</label>
    <referenceTo>animalos__Referral__c</referenceTo>
    <relationshipLabel>Referral Stage Trackings</relationshipLabel>
    <relationshipName>Referral_Stage_Trackings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>