force-app/main/default/objects/aos_Referral_Stage_Tracking__c/fields/aos_Stage__c.field-meta.xml
<CustomField>
    <fullName>aos_Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Initial Review</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>Home Inspection</fullName>
            </value>
            <value>
                <fullName>Veterinary Check</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Trial Period</fullName>
            </value>
            <value>
                <fullName>Trial Unsuccessful</fullName>
            </value>
            <value>
                <fullName>Adopted Awaiting Pickup</fullName>
            </value>
            <value>
                <fullName>Adopted</fullName>
            </value>
            <value>
                <fullName>Awaiting Client Input</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>