force-app/main/default/objects/aos_Referral_Stage_Tracking__c/fields/aos_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>aos_Start_Date_Time__c</fullName>
    <label>Start Date/Time</label>
    <type>DateTime</type>
</CustomField>